@@ -4,17 +4,19 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.mailonap543</groupId>
-    <artifactId>backend-module</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.0</version> <relativePath/> </parent>
 
+    <groupId>com.mailonap543</groupId>
+    <artifactId>backend-module</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+
     <properties>
-        <java.version>17</java.version> </properties>
+        <java.version>17</java.version>
+        <surefire.argLine>-Dnet.bytebuddy.experimental=true</surefire.argLine>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -30,6 +32,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -37,6 +40,25 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -45,6 +67,15 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>${surefire.argLine}</argLine>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
